--- a/index.html
+++ b/index.html
@@ -762,13 +762,15 @@
         <div class="container">
             <div class="about_flex">
                 <div class="about_images">
-                    <div class="tool_wrap"><img src="images/aboutandtools.png" alt=""></div>
+                    <div class="tool_wrap">
+                        <img src="/_ipx/images/aboutandtools.png?width=500&format=auto" alt="">
+                    </div>
                     <div class="person_wrap">
                         <div class="person_bg_dark"></div>
-                        <img class="dark_rectangle" src="images/darkrectangle.svg" alt="">
-                        <img class="orange_rectangle" src="images/orangereactangle.svg" alt="">
-                        <img class="face_glasses" src="images/facewithglasses.svg" alt="">
-                        <img class="person_with_latop" src="images/personwithlaptop.svg" alt="">
+                        <img src="/_ipx/images/darkrectangle.svg?width=200&format=auto" alt="">
+                        <img src="/_ipx/images/orangereactangle.svg?width=200&format=auto" alt="">
+                        <img src="/_ipx/images/facewithglasses.svg?width=150&format=auto" alt="">
+                        <img src="/_ipx/images/personwithlaptop.svg?width=300&format=auto" alt="">
                     </div>
                 </div>
                 <div class="about_content">
