Abdul jabbar Calendly
Adding calendly link for abdukl jabbar

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         <ul>
                             <li><a href="#experience" class="scroll1">Experience</a></li>
                             <li><a href="showcase.html" class="scroll2">Projects</a></li>
-                            <li><a target="_blank" href="https://calendly.com/dev-jkhan" class="scroll3">Contact Us</a>
+                            <li><a target="_blank" href="https://calendly.com/abjabbar-work/30min" class="scroll3">Contact Us</a>
                             </li>
                         </ul>
                     </div>
@@ -782,7 +782,7 @@
                         and mobile technologies like React Native. I am also skilled in backend technologies such as
                         NodeJS and databases like MongoDB and PostgreSQL. With a focus on performance, maintainability,
                         and user experience, I aim to deliver quality solutions that support client goals..</p>
-                    <a class="secondary_btn" target="_blank" href="https://calendly.com/dev-jkhan">Schedule a call</a>
+                    <a class="secondary_btn" target="_blank" href="https://calendly.com/abjabbar-work/30min">Schedule a call</a>
                 </div>
             </div>
         </div>
@@ -994,7 +994,7 @@
                     <ul>
                         <li><a href="#experience" class="scroll1">Experience</a></li>
                         <li><a href="showcase.html">Projects</a></li>
-                        <li><a target="_blank" href="https://calendly.com/dev-jkhan">Contact Us</a></li>
+                        <li><a target="_blank" href="https://calendly.com/abjabbar-work/30min">Contact Us</a></li>
                     </ul>
                 </div>
             </div>
