--- a/showcase.html
+++ b/showcase.html
@@ -37,7 +37,7 @@
                         <ul>
                             <li><a href="index.html#experience">Experience</a></li>
                             <li><a href="showcase.html">Projects</a></li>
-                            <li><a target="_blank" href="https://calendly.com/dev-jkhan" class="scroll3">Contact Us</a>
+                            <li><a target="_blank" href="https://calendly.com/abjabbar-work/30min" class="scroll3">Contact Us</a>
                             </li>
                         </ul>
                     </div>
@@ -395,7 +395,7 @@
                     <ul>
                         <li><a href="index.html#experience">Experience</a></li>
                         <li><a href="showcase.html">Projects</a></li>
-                        <li><a target="_blank" href="https://calendly.com/dev-jkhan">Contact Us</a></li>
+                        <li><a target="_blank" href="https://calendly.com/abjabbar-work/30min">Contact Us</a></li>
                     </ul>
                 </div>
             </div>
