Changing Project linking
Updated scroll effect from nav Projects link and created page link. also, removed page linked from banner view projects and created scroll effect

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <div class="nav-wrap">
                         <ul>
                             <li><a href="#experience" class="scroll1">Experience</a></li>
-                            <li><a href="showcase.html" class="scroll2">Projects</a></li>
+                            <li><a href="showcase.html">Projects</a></li>
                             <li><a target="_blank" href="https://calendly.com/abjabbar-work/30min" class="scroll3">Contact Us</a>
                             </li>
                         </ul>
@@ -66,7 +66,7 @@
                         user-focused, SEO-friendly, and responsive web applications. Let’s make your ideas a seamless
                         digital experience!</p>
                     <div class="button_row">
-                        <a class="primary_btn" href="showcase.html">View Projects</a>
+                        <a class="primary_btn scroll2" href="">View Projects</a>
                         <a class="secondary_btn" target="_blank" href="JabbarFrontend.pdf">Resume</a>
                     </div>
                 </div>
