--- a/showcase.html
+++ b/showcase.html
@@ -22,8 +22,14 @@
 <body>
     <div class="preloader">
         <div class="preloader_inner">
-            <img src="images/abduljabbar.svg" alt="Abdul jabbar">
+            <img src="images/abduljabbar.svg" alt="Abdul Jabbar">
         </div>
+        <div id="loader">
+            Loading... <span id="percentage">0%</span>
+            <div id="progress-bar">
+              <div id="progress"></div>
+            </div>
+          </div>
     </div>
     <!-- Header Start Here -->
     <header>
