--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     user-focused, SEO-friendly, and responsive web applications. Let’s make your ideas a seamless
                     digital experience!</p>
                 <div class="button_row">
-                    <a class="primary_btn scroll2" href="">View Projects</a>
+                    <a class="primary_btn" href="showcase.html">View Projects</a>
                     <a class="secondary_btn" target="_blank" href="JabbarFrontend.pdf">Resume</a>
                 </div>
             </div>
